fix: even out spacing around Conforma summary bar

--- a/src/components/Conforma/ConformaResultsTab/ConformaResultsTab.scss
+++ b/src/components/Conforma/ConformaResultsTab/ConformaResultsTab.scss
@@ -1,6 +1,6 @@
 .conforma-results-tab {
   &__summary-wrapper {
-    margin-top: var(--pf-t--global--spacer--md);
+    margin-block: var(--pf-t--global--spacer--md);
   }
 
   &__detail-table tbody > tr > td {
